--- a/app/scss/base/container.scss
+++ b/app/scss/base/container.scss
@@ -2,6 +2,7 @@ body {
     background-color: #e4e4e4;
 	font-family: Open Sans;
     margin-bottom: 50px;
+    // background-image: url(../assets/images/favicon.png);
 }
 .container__wrap{
     margin-bottom: 100px;
